--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
@@ -25,7 +27,8 @@
     "eslint": "^8.54.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "3.1.0"
+    "prettier": "3.1.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
